--- a/css/style.css
+++ b/css/style.css
@@ -8726,6 +8726,10 @@ h2 span,
     border-spacing: 0 20px;
   }
 
+  .card-links__left {
+    width: 210px;
+  }
+
   .card-links__lnk {
     font-size: 12px;
   }
