--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1069,6 +1069,9 @@
 	&__left {
 		float: left;
 		width: 320px;
+		@include lg-block {
+			width: 210px;
+		}
 	}
 	&__right {
 		text-align: right;
