--- a/pug/modals/_modal-content-comments.pug
+++ b/pug/modals/_modal-content-comments.pug
@@ -26,7 +26,7 @@
 						p
 							a.modalMain-comments__curentImg(href="3") #3 
 							| В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.
-					.comment__link
+					.comment__links
 						button.comment__reply Ответить
 			.comment#commentator_02
 				.comment-box
@@ -49,7 +49,7 @@
 						.comment__text
 							p
 								| Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.
-						.comment__link
+						.comment__links
 							button.comment__reply Ответить
 				.comment#commentator_03
 					.comment-box
@@ -74,7 +74,7 @@
 									| Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. 
 								p
 									| Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.
-							.comment__link
+							.comment__links
 								button.comment__reply Ответить
 		.comment#commentator_04
 			.comment-box
@@ -98,7 +98,7 @@
 					.comment__text
 						p
 							| Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.
-					.comment__link
+					.comment__links
 						button.comment__reply Ответить
 		.comment#commentator_05
 			.comment-box
@@ -122,7 +122,7 @@
 					.comment__text
 						p
 							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
-					.comment__link
+					.comment__links
 						button.comment__reply Ответить
 		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
