--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -119,7 +119,7 @@ block content
 			- var n = 0;
 			while n < 5
 				- var n = n + 1;
-				.col-xl-4
+				.col-6.col-sm-6.col-md-4
 					.card-person.margin-bottom-15
 						.card-person__imgbox(style="background-image: url(img/widget-img-06.jpg)")
 							img(src="img/widget-img-06.jpg" alt="image")
@@ -138,12 +138,12 @@ block content
 				.content-titlebox
 					h2 Добровольная Народная Дружина
 	.row
-		.col-xl-4
+		.col-12.col-sm-4
 			.card
 				.card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-14.jpg);')
 					.card-warning-text.hide
 						p
-		.col-xl-8
+		.col-12.col-sm-8
 			.card
 				.card__text.fix-height-210.text-ddd-210
 					p
@@ -152,12 +152,12 @@ block content
 						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 					a.button.card__more(href='#') Читать далее
 	.row
-		.col-xl-4
+		.col-12.col-sm-4
 			.card
 				.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-13.jpg);')
 					.card-warning-text.hide
 						p
-		.col-xl-8
+		.col-12.col-sm-8
 			.card
 				.card__text.fix-height-210.text-ddd-210
 					p
