--- a/pug/post.pug
+++ b/pug/post.pug
@@ -5,7 +5,7 @@ block content
 	.card.card-full-head_special
 	.cards
 		article(id=ID).article
-			.card.margin-bottom-15
+			.card.margin-bottom-lg-15.margin-bottom-5
 				.article-imgwrap.article-imgwrap_slim
 					.article-imgbox.article-imgbox_head(style='background-image: url(img/post-img-01.jpg);')
 				- var text = '24 Сентября 2018';
@@ -78,9 +78,16 @@ block content
 					.comment__text
 						p
 							| В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.
-					.comment__link
-						button.comment__reply Ответить
-			.comment#commentator_02
+					.comment__links
+						.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="#commentator_02")
+							button Свернуть
+							i.icon-arrow-down.icon-rotate-180
+						.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="#commentator_02")
+							button Развернуть
+							i.icon-arrow-down
+						.comment__reply.comment__link_right
+							button Ответить
+			.comment.collapse#commentator_02
 				.comment-box
 					.comment__avatar(style='background-image: url(img/person-photo-02.jpg)')
 					.comment__content.padding-10.padding-xl-15
@@ -101,9 +108,16 @@ block content
 						.comment__text
 							p
 								| ЮЛИЯ ШХИЯНЦ, Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.
-						.comment__link
-							button.comment__reply Ответить
-				.comment#commentator_03
+						.comment__links
+							.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="#commentator_03")
+								button Свернуть
+								i.icon-arrow-down.icon-rotate-180
+							.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="#commentator_03")
+								button Развернуть
+								i.icon-arrow-down
+							.comment__reply.comment__link_right
+								button Ответить
+				.comment.collapse#commentator_03
 					.comment-box
 						.comment__avatar(style='background-image: url(img/person-photo-03.jpg)')
 						.comment__content.padding-10.padding-xl-15
@@ -126,9 +140,109 @@ block content
 									| ПЕТР ТУШИН, Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом.
 								p
 									| Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.
-							.comment__link
-								button.comment__reply Ответить
-		.comment#commentator_04
+							.comment__links
+								.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="#commentator_04")
+									button Свернуть
+									i.icon-arrow-down.icon-rotate-180
+								.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="#commentator_04")
+									button Развернуть
+									i.icon-arrow-down
+								.comment__reply.comment__link_right
+									button Ответить
+					.comment.collapse#commentator_04
+						.comment-box
+							.comment__avatar(style='background-image: url(img/person-photo-03.jpg)')
+							.comment__content.padding-10.padding-xl-15
+								.tagbox.comment__tagbox
+									.tag
+										.comment__nickname
+											span СВЕТЛАНА НИКОЛАШИНА
+									.like-card
+										button.like-button.comment-button.like-button_thin
+											i #
+											span.like-count 120
+										button.like-button.like-button_thin
+											i.icon-like
+											span.like-count 86
+
+								.comment__date
+									span 12 Декабря 2018, 16:32
+								.comment__text
+									p
+										| ПЕТР ТУШИН, Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом.
+									p
+										| Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.
+								.comment__links
+									.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="#commentator_05")
+										button Свернуть
+										i.icon-arrow-down.icon-rotate-180
+									.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="#commentator_05")
+										button Развернуть
+										i.icon-arrow-down
+									.comment__reply.comment__link_right
+										button Ответить
+						.comment.collapse#commentator_05
+							.comment-box
+								.comment__avatar(style='background-image: url(img/person-photo-01.jpg)')
+								.comment__content.padding-10.padding-xl-15
+									.tagbox.comment__tagbox
+										.tag
+											.comment__nickname
+												span ЮЛИЯ ШХИЯНЦ
+										.like-card
+											button.like-button.comment-button.like-button_thin
+												i #
+												span.like-count 120
+											button.like-button.like-button_thin
+												i.icon-like
+												span.like-count 86
+
+									.comment__date
+										span 12 Декабря 2018, 16:32
+									.comment__text
+										p
+											| В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.
+									.comment__links
+										.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="#commentator_06")
+											button Свернуть
+											i.icon-arrow-down.icon-rotate-180
+										.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="#commentator_06")
+											button Развернуть
+											i.icon-arrow-down
+										.comment__reply.comment__link_right
+											button Ответить
+							.comment.collapse#commentator_06
+								.comment-box
+									.comment__avatar(style='background-image: url(img/person-photo-05.jpg)')
+									.comment__content.padding-10.padding-xl-15
+										.tagbox.comment__tagbox
+											.tag
+												.comment__nickname
+													span
+														| ЕЛЕНА МАЦИНОВА
+											.like-card
+												button.like-button.comment-button.like-button_thin
+													i #
+													span.like-count 120
+												button.like-button.like-button_thin
+													i.icon-like
+													span.like-count 86
+
+										.comment__date
+											span 12 Декабря 2018, 16:32
+										.comment__text
+											p
+												| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
+										.comment__links
+											.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="")
+												button Свернуть
+												i.icon-arrow-down.icon-rotate-180
+											.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="")
+												button Развернуть
+												i.icon-arrow-down
+											.comment__reply.comment__link_right
+												button Ответить
+		.comment
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-04.jpg)')
 				.comment__content.padding-10.padding-xl-15
@@ -150,9 +264,16 @@ block content
 					.comment__text
 						p
 							| Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.
-					.comment__link
-						button.comment__reply Ответить
-		.comment#commentator_05
+					.comment__links
+						.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="")
+							button Свернуть
+							i.icon-arrow-down.icon-rotate-180
+						.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="")
+							button Развернуть
+							i.icon-arrow-down
+						.comment__reply.comment__link_right
+							button Ответить
+		.comment
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-05.jpg)')
 				.comment__content.padding-10.padding-xl-15
@@ -174,8 +295,15 @@ block content
 					.comment__text
 						p
 							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
-					.comment__link
-						button.comment__reply Ответить
+					.comment__links
+						.comment__link.comment__link_left.less.hide(data-toggle="collapse", data-target="")
+							button Свернуть
+							i.icon-arrow-down.icon-rotate-180
+						.comment__link.comment__link_left.more.hide(data-toggle="collapse", data-target="")
+							button Развернуть
+							i.icon-arrow-down
+						.comment__reply.comment__link_right
+							button Ответить
 		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
 				.article-author
