--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -22,6 +22,9 @@
 	&-imgwrap {
 		margin-bottom: 30px;
 		@include clearfix;
+		@include md-block {
+			margin-bottom: 15px;
+		}
 		&_slim {
 			margin-bottom: 15px;
 		}
@@ -40,12 +43,26 @@
 		&_full {
 			height: 300px;
 			width: 100%;
+			@include md-block {
+				height: 205px;
+			}
+			@include xs-block {
+				height: 180px;
+			}
 		}
 		&_third {
 			float: left;
 			width: calc(33.33333% - 10px);
 			height: 210px;
 			margin-right: 15px;
+
+			@include md-block {
+				height: 155px;
+			}
+			@include xs-block {
+				width: 100%;
+				margin-bottom: 15px;
+			}
 			&:last-child {
 				margin-right: 0;
 			}
@@ -75,6 +92,12 @@
 		&_head {
 			height: 360px;
 			width: 100%;
+			@include md-block {
+				height: 205px;
+			}
+			@include xs-block {
+				height: 180px;
+			}
 		}
 	}
 	// &-quote {
@@ -82,16 +105,22 @@
 	// }
 	&-blockquote {
 		position: relative;
-		padding: 15px;
-		padding-left: 72px;
+		padding: 15px 15px 15px 72px;
 		margin-bottom: 15px;
 		border-radius: 5px;
 		background-color: #eeefef;
 		color: $basic-color;
-		font-family: "PT Serif";
+		font-family: "PT Serif", serif;
 		font-size: 17px;
 		font-weight: 400;
 		line-height: 23px;
+		@include md-block {
+			font-size: 14px;
+		}
+		@include xs-block {
+			padding-left: 58px;
+			margin: 0 -15px 15px;
+		}
 		@include before {
 			top: 15px;
 			left: 15px;
@@ -103,17 +132,26 @@
 	}
 	&-text {
 		color: $basic-color;
-		font-family: "PT Serif";
+		font-family: "PT Serif", serif;
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 23px;
 		p {
 			font-size: 17px;
 			margin-bottom: 15px;
+			line-height: 1.4;
+			@include md-block {
+				font-size: 14px;
+				margin-bottom: 10px;
+			}
 		}
 		h3 {
 			margin-bottom: 18px;
 			font-size: 22px;
+			@include md-block {
+				font-size: 16px;
+				margin-bottom: 10px;
+			}
 		}
 	}
 	&-author {
@@ -122,10 +160,21 @@
 		border-radius: 5px;
 		background-color: #fbfbfb;
 		color: $basic-color;
-		font-family: "PT Serif";
+		font-family: "PT Serif", serif;
 		font-size: 17px;
 		font-weight: 400;
 		@include clearfix;
+		@include md-block {
+			margin-top: 15px;
+			font-size: 10px;
+		}
+		p {
+			@include xs-block {
+				display: inline-block;
+				margin-top: 5px;
+
+			}
+		}
 		&__left {
 			vertical-align: middle;
 			// display: inline-block;
@@ -133,6 +182,9 @@
 			font-family: "Roboto", sans-serif;
 			font-size: 20px;
 			font-weight: 400;
+			@include md-block {
+				font-size: 12px;
+			}
 		}
 
 		&__username {
@@ -141,6 +193,9 @@
 			font-family: "Roboto", sans-serif;
 			font-size: 14px;
 			font-weight: 300;
+			@include md-block {
+				font-size: 10px;
+			}
 		}
 	}
 	&-preview {
