--- a/sass/_comment.scss
+++ b/sass/_comment.scss
@@ -1,5 +1,8 @@
 .comment {
 	padding-left: 45px;
+	@include xs-block {
+		padding-left: 20px;
+	}
 	&_special {
 		// margin-top: -15px;
 		margin-bottom: 15px;
@@ -14,6 +17,12 @@
 		margin-bottom: 15px;
 		border-radius: 5px;
 		border: 1px solid #bcbdc0;
+		@include md-block {
+			padding-left: 30px;
+		}
+		@include xs-block {
+			padding-left: 25px;
+		}
 	}
 	&__tagbox {
 		margin-bottom: 10px;
@@ -28,6 +37,16 @@
 		background-size: contain;
 		border-radius: 50%;
 		border: 1px solid #707070;
+		@include md-block {
+			width: 60px;
+			height: 60px;
+			left: -30px;
+		}
+		@include xs-block {
+			width: 45px;
+			height: 45px;
+			left: -22.5px;
+		}
 	}
 	&__nickname {
 		color: $basic-color;
@@ -39,6 +58,10 @@
 		color: #bcbdc0;
 		font-size: 14px;
 		font-weight: 400;
+		@include md-block {
+			font-size: 10px;
+			margin-bottom: 10px;
+		}
 		&:before {
 			display: inline-block;
 			content: '';
@@ -48,6 +71,11 @@
 			background: url(../img/icon/shape.svg) center no-repeat;
 			background-size: contain;
 			vertical-align: bottom;
+			@include md-block {
+				width: 12px;
+				height: 13px;
+				//vertical-align: middle;
+			}
 		}
 	}
 	&__text {
@@ -59,20 +87,65 @@
 			font-size: 14px;
 			margin-bottom: 25px;
 			font-weight: 400;
+			@include md-block {
+				font-size: 12px;
+				margin-bottom: 10px;
+			}
 		}
 	}
-	&__link {
+	&__links {
+		@include clearfix;
 		color: $basic-color;
 		font-size: 14px;
 		text-align: right;
 		font-weight: 300;
+
+	}
+	&__link, &__reply {
+		display: inline-block;
+		float: left;
+		color: $basic-color;
+		font-size: 14px;
+		text-align: right;
+		font-weight: 300;
+		cursor: pointer;
+		@include md-block {
+			font-size: 12px;
+		}
+		&.hide {
+			display: none;
+		}
+		i {
+			font-size: 10px;
+			vertical-align: middle;
+			color: inherit;
+			margin-left: 4px;
+			opacity: 0.6;
+		}
 		@include hover {
 			font-weight: 400;
 		}
+
+
 		& > * {
 			color: inherit;
 			font-size: 14px;
 			font-weight: inherit;
+			@include hover {
+				font-weight: 400;
+			}
+			@include md-block {
+				font-size: 12px;
+			}
+		}
+	}
+	&__link {
+		&_left {
+			text-align: left;
+		}
+		&_right {
+			float: none;
+			text-align: right;
 		}
 	}
 	&-long {
@@ -132,6 +205,10 @@
 		border: 1px solid #bcbdc0;
 		padding: 18px;
 		resize: vertical;
+		@include md-block {
+			padding: 15px;
+			font-size: 12px;
+		}
 	}
 	&__btnbox {
 		text-align: right;
