--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -34,6 +34,9 @@
 			@include md-block {
 				font-size: 22px;
 			}
+			@include xs-block {
+				font-size: 20px;
+			}
 		}
 		&_specialtitle {
 			h1, h2, h3, h4, h5, p, div, span {
@@ -251,7 +254,7 @@
 		@include md-block {
 			font-size: 8px;
 			line-height: 1.4;
-			vertical-align: middle;
+			vertical-align: top;
 		}
 		// transition: color 0.4s ease-out;
 		.icon-comment {
